fdo#53920 Switch back tab at RefButton closure time

Bug occurs because visible tab is not the initial tab. So, instead of
switching back to initial tab at dialog closure time (removed from
cellsh2.cxx), this commit proposes that switching back to initial tab
is operate when expanding the RefButton shrink dialog.

Reviewed-on: https://gerrit.libreoffice.org/11660
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>
(cherry picked from commit 31432c4469e7e0d05516143533d6b5e0b411dda3)

Change-Id: I3cf7ed14054fa69881d4ecbc55c48dfbfc4356aa